@@ -45,45 +45,28 @@ Built-in `Hash` instances are provided for `Long`, `String`, and `Array[Byte]`.
 ## String hashing
 
 The default `Hash[String]` applies MurmurHash3 with seed zero to the String's logical UTF-16 code
-units in little-endian byte order. It is allocation-free, uses only public Java APIs, preserves lone
-surrogate code units, and has the same result regardless of the JVM's compact-string mode or native
-byte order.
+units in little-endian byte order. It is allocation-free, uses only public Java APIs.
 
-Applications that prioritize hashing speed for long Latin-1 strings can explicitly select the
-private-JDK implementation:
+Applications that prioritize hashing speed can explicitly select the private-JDK implementation:
 
 ```scala
 import se.thanh.pds.bloomfilter.{ BloomFilter, Hash }
-import Hash.UnsafeCompact.given
+import Hash.privateJDK.given
 
 val filter = BloomFilter[String](numberOfItems = 1_000L, falsePositiveRate = 0.01)
 ```
 
-`Hash.UnsafeCompact` requires this exact JVM option and fails during selection if access is not
+@:callout(warning)
+`Hash.privateJDK` requires this exact JVM option and fails during selection if access is not
 available:
 
 ```text
 --add-opens=java.base/java.lang=ALL-UNNAMED
 ```
 
-For a forked sbt application, for example:
-
-```scala
-Compile / run / fork := true
-Compile / run / javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED"
-```
-
-The unsafe instance hashes the private `String.value` byte array directly, preserving the previous
-hasher's representation-dependent behavior. With compact strings enabled this normally means one
-byte per Latin-1 code unit; disabling compact strings changes those hashes because the backing array
-changes. JVM layout and byte-order differences can change hashes as well.
-
-@:callout(warning)
-Hasher selection and JVM String representation are part of a Bloom filter's data format. The default
-and `UnsafeCompact` hashes can differ, so do not use one hasher to query an existing persisted or
-off-heap filter populated with the other. Every reader and writer must select the same given, and
-`UnsafeCompact` users must also keep a compatible JVM configuration.
 @:@
+
+## Off heap BloomFilter
 
 The default implementation is backed by an `Array[Long]`, so it's total bit size is limited
 by nature of JVM Array size limit. So if you want a really really big total bit size, you'll
@@ -112,15 +95,43 @@ supported Java versions use an `Unsafe`-based implementation.
 
 ## Benchmarks
 
-The production String hash benchmark covers the `safe` and `unsafe` implementations with ASCII,
-non-ASCII Latin-1, BMP, supplementary, early-wide, and late-wide inputs at 8, 32, 256, and 1024
-UTF-16 code units. Run the matrix with GC profiling:
 
-```text
-sbt "benchmark/Jmh/run -prof gc se.thanh.pds.bloomfilter.benchmark.StringHashBenchmark.*"
+Latest benchmarks (29/08/2026) on an isolated hardware Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz with JDK 25.
+This is 2/3 times faster the original across implementations.
+
+
 ```
-
-Both paths are intended to allocate effectively zero bytes per hash after setup. The safe default is
-the portable choice. `UnsafeCompact` is expected to have its clearest advantage on long ASCII and
-Latin-1 strings because it hashes the backing bytes directly. Measure on the deployment JDK and CPU
-before accepting private-JDK access and representation-dependent hashes as operational dependencies.
+[info] Benchmark                             (charset)  (length)  (tokens)  Mode  Cnt    Score   Error  Units
+[info] StringItemBenchmark.ffmOffHeapAdd        latin1        32        10  avgt   45   46.159 ± 0.014  ns/op
+[info] StringItemBenchmark.ffmOffHeapAdd        latin1      1024        10  avgt   45  508.509 ± 0.158  ns/op
+[info] StringItemBenchmark.ffmOffHeapAdd         utf16        32        10  avgt   45   49.032 ± 0.015  ns/op
+[info] StringItemBenchmark.ffmOffHeapAdd         utf16      1024        10  avgt   45  504.808 ± 0.210  ns/op
+[info] StringItemBenchmark.ffmOffHeapGet        latin1        32        10  avgt   45   46.549 ± 0.009  ns/op
+[info] StringItemBenchmark.ffmOffHeapGet        latin1      1024        10  avgt   45  510.505 ± 0.577  ns/op
+[info] StringItemBenchmark.ffmOffHeapGet         utf16        32        10  avgt   45   49.297 ± 0.062  ns/op
+[info] StringItemBenchmark.ffmOffHeapGet         utf16      1024        10  avgt   45  505.077 ± 0.302  ns/op
+[info] StringItemBenchmark.onHeapAdd            latin1        32        10  avgt   45   44.630 ± 0.015  ns/op
+[info] StringItemBenchmark.onHeapAdd            latin1      1024        10  avgt   45  509.140 ± 0.812  ns/op
+[info] StringItemBenchmark.onHeapAdd             utf16        32        10  avgt   45   47.288 ± 0.034  ns/op
+[info] StringItemBenchmark.onHeapAdd             utf16      1024        10  avgt   45  502.994 ± 0.432  ns/op
+[info] StringItemBenchmark.onHeapGet            latin1        32        10  avgt   45   44.896 ± 0.008  ns/op
+[info] StringItemBenchmark.onHeapGet            latin1      1024        10  avgt   45  508.376 ± 0.635  ns/op
+[info] StringItemBenchmark.onHeapGet             utf16        32        10  avgt   45   47.494 ± 0.058  ns/op
+[info] StringItemBenchmark.onHeapGet             utf16      1024        10  avgt   45  501.552 ± 1.961  ns/op
+[info] StringItemBenchmark.originalAdd          latin1        32        10  avgt   45   97.925 ± 0.194  ns/op
+[info] StringItemBenchmark.originalAdd          latin1      1024        10  avgt   45  524.476 ± 0.615  ns/op
+[info] StringItemBenchmark.originalAdd           utf16        32        10  avgt   45   97.916 ± 0.132  ns/op
+[info] StringItemBenchmark.originalAdd           utf16      1024        10  avgt   45  524.090 ± 0.602  ns/op
+[info] StringItemBenchmark.originalGet          latin1        32        10  avgt   45   96.408 ± 0.063  ns/op
+[info] StringItemBenchmark.originalGet          latin1      1024        10  avgt   45  523.925 ± 1.485  ns/op
+[info] StringItemBenchmark.originalGet           utf16        32        10  avgt   45   96.317 ± 0.115  ns/op
+[info] StringItemBenchmark.originalGet           utf16      1024        10  avgt   45  522.558 ± 0.448  ns/op
+[info] StringItemBenchmark.unsafeOffHeapAdd     latin1        32        10  avgt   45   44.499 ± 0.007  ns/op
+[info] StringItemBenchmark.unsafeOffHeapAdd     latin1      1024        10  avgt   45  506.656 ± 0.170  ns/op
+[info] StringItemBenchmark.unsafeOffHeapAdd      utf16        32        10  avgt   45   47.241 ± 0.009  ns/op
+[info] StringItemBenchmark.unsafeOffHeapAdd      utf16      1024        10  avgt   45  502.724 ± 0.093  ns/op
+[info] StringItemBenchmark.unsafeOffHeapGet     latin1        32        10  avgt   45   43.844 ± 0.013  ns/op
+[info] StringItemBenchmark.unsafeOffHeapGet     latin1      1024        10  avgt   45  507.192 ± 0.644  ns/op
+[info] StringItemBenchmark.unsafeOffHeapGet      utf16        32        10  avgt   45   46.559 ± 0.006  ns/op
+[info] StringItemBenchmark.unsafeOffHeapGet      utf16      1024        10  avgt   45  501.779 ± 0.128  ns/op
+```
